[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
include = ["src*"]

[project]
name = "pokt-data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphql-core>=3.2.8",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[project.scripts]
pokt-data-agent-mcp = "src.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/graphql_client.py" = ["E501"]
"src/data_sub_agents.py" = ["E501"]
"src/query_sub_agents.py" = ["E501"]
"src/mcp_tools.py" = ["E501"]
"src/tools_data.py" = ["E501"]
"src/graphql_validator.py" = ["E501"]
"src/mcp_utils.py" = ["E501"]
